--- a/styles/style.scss
+++ b/styles/style.scss
@@ -363,6 +363,7 @@ header {
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
         img {
             position: absolute;
             top: 0;
