--- a/styles/style.css
+++ b/styles/style.css
@@ -488,6 +488,7 @@ header section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: hidden;
 }
 
 header section img {
