--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,10 @@ html {
   font-size: 10px;
 }
 
+html, body, section {
+  height: 100%;
+}
+
 body {
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
@@ -395,7 +399,7 @@ header .header, header .header .nav, .back-to div a, .about-me, .skills, .contac
 header {
   background: -webkit-gradient(linear, left top, left bottom, from(#2b1055), to(#7597de));
   background: linear-gradient(#2b1055, #7597de);
-  height: 100vmax;
+  height: 100vh;
   width: 100%;
   overflow: hidden;
 }
@@ -478,7 +482,7 @@ header .header .nav a:hover, header .header .nav a.active {
 header section {
   position: relative;
   width: 100%;
-  height: 100vmax;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
