--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,6 +11,10 @@ html {
     font-size: 10px;
 }
 
+html, body, section {
+    height: 100%;
+}
+
 body {
     font-size: 16px;
     font-family: $fontFamily1;
@@ -283,7 +287,7 @@ ul {
 header {
     background: linear-gradient($gradient1, $gradient2);
     // min-height: 80vh;
-    height: 100vmax;
+    height: 100vh;
     // max-height: 100vh;
     width: 100%;
     overflow: hidden;
@@ -359,7 +363,7 @@ header {
     section {
         position: relative;
         width: 100%;
-        height: 100vmax;
+        height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
