--- a/styles/style.css
+++ b/styles/style.css
@@ -400,6 +400,7 @@ header {
   background: -webkit-gradient(linear, left top, left bottom, from(#2b1055), to(#7597de));
   background: linear-gradient(#2b1055, #7597de);
   height: 100vh;
+  max-height: -webkit-fill-available;
   width: 100%;
   overflow: hidden;
 }
@@ -483,6 +484,7 @@ header section {
   position: relative;
   width: 100%;
   height: 100vh;
+  max-height: -webkit-fill-available;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -566,6 +568,7 @@ header section #explore {
   z-index: 100;
   right: 0;
   bottom: 0;
+  height: auto;
 }
 
 .back-to div {
