--- a/styles/style.scss
+++ b/styles/style.scss
@@ -289,6 +289,7 @@ header {
     // min-height: 80vh;
     height: 100vh;
     // max-height: 100vh;
+    max-height: -webkit-fill-available;
     width: 100%;
     overflow: hidden;
     .position-fixed {
@@ -364,6 +365,7 @@ header {
         position: relative;
         width: 100%;
         height: 100vh;
+        max-height: -webkit-fill-available;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -436,6 +438,7 @@ header {
     z-index: 100;
     right: 0;
     bottom: 0;
+    height: auto;
 
     div {
         margin: 3rem ;
