--- a/styles/style.scss
+++ b/styles/style.scss
@@ -289,7 +289,7 @@ header {
     // min-height: 80vh;
     height: 100vh;
     // max-height: 100vh;
-    max-height: -webkit-fill-available;
+    // max-height: -webkit-fill-available;
     width: 100%;
     overflow: hidden;
     .position-fixed {
@@ -364,7 +364,7 @@ header {
     section {
         position: relative;
         width: 100%;
-        height: 100vh;
+        height: calc(100vh - calc(100vh - 100%));
         max-height: -webkit-fill-available;
         display: flex;
         justify-content: center;
