--- a/styles/style.css
+++ b/styles/style.css
@@ -482,7 +482,7 @@ header .header .nav a:hover, header .header .nav a.active {
 header section {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   max-height: -webkit-fill-available;
   display: -webkit-box;
   display: -ms-flexbox;
