--- a/styles/style.scss
+++ b/styles/style.scss
@@ -364,7 +364,7 @@ header {
     section {
         position: relative;
         width: 100%;
-        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
         max-height: -webkit-fill-available;
         display: flex;
         justify-content: center;
