--- a/styles/style.css
+++ b/styles/style.css
@@ -399,7 +399,7 @@ header .header, header .header .nav, .back-to div a, .about-me, .skills, .contac
 header {
   background: -webkit-gradient(linear, left top, left bottom, from(#2b1055), to(#7597de));
   background: linear-gradient(#2b1055, #7597de);
-  height: calc(100vh - calc(100vh - 100%));
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   overflow: hidden;
 }
@@ -482,7 +482,7 @@ header .header .nav a:hover, header .header .nav a.active {
 header section {
   position: relative;
   width: 100%;
-  height: calc(var(--vh, 1vh) * 100);
+  height: 100vh;
   max-height: -webkit-fill-available;
   display: -webkit-box;
   display: -ms-flexbox;
