--- a/styles/style.scss
+++ b/styles/style.scss
@@ -287,7 +287,7 @@ ul {
 header {
     background: linear-gradient($gradient1, $gradient2);
     // min-height: 80vh;
-    height: calc(100vh - calc(100vh - 100%));
+    height: calc(var(--vh, 1vh) * 100);
     // max-height: 100vh;
     // max-height: -webkit-fill-available;
     width: 100%;
@@ -364,7 +364,7 @@ header {
     section {
         position: relative;
         width: 100%;
-        height: calc(var(--vh, 1vh) * 100);
+        height: 100vh;
         max-height: -webkit-fill-available;
         display: flex;
         justify-content: center;
