--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,8 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #E5E5E5;
   overflow-x: hidden;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 a {
@@ -399,7 +401,7 @@ header .header, header .header .nav, .back-to div a, .about-me, .skills, .contac
 header {
   background: -webkit-gradient(linear, left top, left bottom, from(#2b1055), to(#7597de));
   background: linear-gradient(#2b1055, #7597de);
-  height: calc(var(--vh, 1vh) * 100);
+  height: 100vh;
   width: 100%;
   overflow: hidden;
 }
