--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,6 +20,8 @@ body {
     font-family: $fontFamily1;
     color: $white;
     overflow-x: hidden;
+    min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 a {
@@ -287,7 +289,8 @@ ul {
 header {
     background: linear-gradient($gradient1, $gradient2);
     // min-height: 80vh;
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
+    // height: calc(var(--vh, 1vh) * 100);
     // max-height: 100vh;
     // max-height: -webkit-fill-available;
     width: 100%;
