--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,8 +20,6 @@ body {
     font-family: $fontFamily1;
     color: $white;
     overflow-x: hidden;
-    min-height: 100vh;
-  min-height: -webkit-fill-available;
 }
 
 a {
@@ -289,10 +287,10 @@ ul {
 header {
     background: linear-gradient($gradient1, $gradient2);
     // min-height: 80vh;
-    height: 100vh;
+    // height: 100vh;
     // height: calc(var(--vh, 1vh) * 100);
-    // max-height: 100vh;
-    // max-height: -webkit-fill-available;
+    height: 100vh;
+    height: -webkit-fill-available;
     width: 100%;
     overflow: hidden;
     .position-fixed {
