--- a/styles/style.scss
+++ b/styles/style.scss
@@ -286,11 +286,8 @@ ul {
 
 header {
     background: linear-gradient($gradient1, $gradient2);
-    // min-height: 80vh;
-    // height: 100vh;
-    // height: calc(var(--vh, 1vh) * 100);
     height: 100vh;
-    height: -webkit-fill-available;
+    height: calc(var(--vh, 1vh) * 100);
     width: 100%;
     overflow: hidden;
     .position-fixed {
