--- a/styles/style.css
+++ b/styles/style.css
@@ -400,7 +400,7 @@ header {
   background: -webkit-gradient(linear, left top, left bottom, from(#2b1055), to(#7597de));
   background: linear-gradient(#2b1055, #7597de);
   height: 100vh;
-  height: -webkit-fill-available;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   overflow: hidden;
 }
